--- a/.github/workflows/carrizomiguel.yml
+++ b/.github/workflows/carrizomiguel.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: Platane/snk/svg-only@v3.2.0
         id: snake-gif
         with:
-          github_user_name: carrizomiguel
+          github_user_name: Asif-shah786
           outputs: |
             dist/github-snake.svg
             dist/github-snake-dark.svg?palette=github-dark
