--- a/.github/workflows/Asif-shah786.yml
+++ b/.github/workflows/Asif-shah786.yml
@@ -14,6 +14,8 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     name: Jobs to update datas
+    permissions:
+      contents: write
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
